<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PmisLite</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="text_pmis_projects">Projects</string>
    <string name="text_pmis_tasks">Tasks</string>
    <string name="text_pmis_my_team">Teams</string>
    <string name="text_pmis_my_notes">Notes</string>
    <string name="text_pmis_my_mail_box">Store Box</string>
    <string name="text_pmis_settings">Settings</string>
    <string name="text_pmis">Mobile Team Manager</string>
    <string name="text_pmis_load_feed">Loading feed data</string>
    <string name="text_pmis_list_item">A List Item Title</string>
    <string name="text_pmis_list_item_desc">The List item description</string>
    <string name="text_pmis_search_projects">Search Projects</string>
    
    <string name="project_item_list">Projects</string>
    <string name="selected_project">Selected Project</string>
    
    <string name="title_item_list">Items</string>
    <string name="title_item_detail">Item Detail</string>

    
    <string-array name="task_status_list">
        <item>open</item>
        <item>closed</item>
        <item>unknown</item>
    </string-array>
    
    <string name="app_accordian_name">Accordion View</string>

    <string-array name="accordion_sections">
        <item>Section A</item>
        <item>Section B</item>
        <item>Section C</item>
        <item>Section D</item>
        <item>Section E</item>
    </string-array>

    <integer-array name="accordion_visibility">
        <item>1</item>
        <item>1</item>
        <item>0</item>
        <item>0</item>
        <item>0</item>
    </integer-array>
    
</resources>
